@@ -138,10 +138,36 @@
                         <artifactId>jacoco-maven-plugin</artifactId>
                         <executions>
                             <execution>
-                                <id>jacoco-prepare-agent</id>
+                                <id>coverage-initialize</id>
                                 <goals>
                                     <goal>prepare-agent</goal>
                                 </goals>
+                            </execution>
+                            <execution>
+                                <id>coverage-report</id>
+                                <phase>post-integration-test</phase>
+                                <goals>
+                                    <goal>report</goal>
+                                </goals>
+                            </execution>
+                            <!-- Threshold -->
+                            <execution>
+                                <id>coverage-check</id>
+                                <goals>
+                                    <goal>check</goal>
+                                </goals>
+                                <configuration>
+                                    <rules>
+                                        <rule>
+                                            <limits>
+                                                <limit>
+                                                    <counter>LINE</counter>
+                                                    <value>COVEREDRATIO</value>
+                                                </limit>
+                                            </limits>
+                                        </rule>
+                                    </rules>
+                                </configuration>
                             </execution>
                         </executions>
                     </plugin>
@@ -232,21 +258,21 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-<!--                <configuration>-->
-<!--                    <source>${maven.compiler.source}</source>-->
-<!--                    <target>${maven.compiler.target}</target>-->
-<!--                    <compilerArgs>-->
-<!--                        <arg>-XDcompilePolicy=simple</arg>-->
-<!--                        &lt;!&ndash;<arg>-Xplugin:ErrorProne</arg>&ndash;&gt;-->
-<!--                    </compilerArgs>-->
-<!--                    <annotationProcessorPaths>-->
-<!--                        <path>-->
-<!--                            <groupId>com.google.errorprone</groupId>-->
-<!--                            <artifactId>error_prone_core</artifactId>-->
-<!--                            <version>${errorprone.version}</version>-->
-<!--                        </path>-->
-<!--                    </annotationProcessorPaths>-->
-<!--                </configuration>-->
+                <!--                <configuration>-->
+                <!--                    <source>${maven.compiler.source}</source>-->
+                <!--                    <target>${maven.compiler.target}</target>-->
+                <!--                    <compilerArgs>-->
+                <!--                        <arg>-XDcompilePolicy=simple</arg>-->
+                <!--                        &lt;!&ndash;<arg>-Xplugin:ErrorProne</arg>&ndash;&gt;-->
+                <!--                    </compilerArgs>-->
+                <!--                    <annotationProcessorPaths>-->
+                <!--                        <path>-->
+                <!--                            <groupId>com.google.errorprone</groupId>-->
+                <!--                            <artifactId>error_prone_core</artifactId>-->
+                <!--                            <version>${errorprone.version}</version>-->
+                <!--                        </path>-->
+                <!--                    </annotationProcessorPaths>-->
+                <!--                </configuration>-->
             </plugin>
         </plugins>
 
@@ -272,6 +298,9 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>2.12.1</version>
+                    <configuration>
+                        <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+                    </configuration>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
